Fixed overlapping footer

--- a/static/style.css
+++ b/static/style.css
@@ -3,11 +3,14 @@ body {
     font-size: 16px;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 main {
-    height: 95%;
     text-align: center;
+    flex: 1 0 auto;
 }
 
 ul {
@@ -42,10 +45,7 @@ table {
 }
 
 footer {
-    position:fixed;
-    width: 100%;
-    background-color: white;
-    bottom: 0;
+    flex-shrink: 0;
     padding: 14px;
     font-size: 14px;
     text-align: center;
